# SpeedXToolKit

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  Pearl-3.5.1.spec  Pearl-3.5.2.spec  Pearl-3.5.spec  Pearl-3.6.spec  README.md  STYLING_GUIDE.md  SpeedXToolKit-3.2.spec  SpeedXToolKit-3.3.spec  SpeedXToolKit-3.4.spec  SpeedXToolKit-3.4demo.spec  app_config.json  coverage.xml  main.py  package_release.py  pyproject.toml  pytest.ini  readme  readme.md  requirements-dev.txt  requirements.txt  results.csv  setup.py  styles.py  test.csv  test.py  test2.py  test_load_preset.py  verify_integration_tests.py
backend/: README.md
controllers/: data_controller.py  file_controller.py  processing_controller.py  save_controller.py
docs/: CRA_Technical_Documentation.md  DCB_0129_Clinical_Safety_Case_Report.md  DPA-BAA_Template.md  DPIA.md  EU_Declaration_of_Conformity.md  HIPAA_SRA.md  ISMS.md  Information_Security_Policy.md  QMS.md  SDLC_Documentation.md  Security_and_Compliance_Whitepaper.md  Software_RMF.md  release_checklist.md  srs.md  traceability_matrix.csv
frontend/: README.md  index.html  package-lock.json  package.json
intergration-test-files/: Mgen Resistance.xls
latest/: notice.txt
models/: __init__.py  custom_code_model.py  dataframe_model.py  delta_calculation.py  delta_calculation_model.py  drop_column.py  drop_column_model.py  essay_process_model.py  keep_column_model.py  path_utils.py  pickle.py  pivot_table.py  pivot_table_model.py  produce_output_model.py  remove_emtpy_rows.py  remove_emtpy_rows_model.py  rename_column.py  rename_column_model.py  (+1 more)
(+108 files in other folders)
